Add emerald katana